added linkedin link

--- a/index.html
+++ b/index.html
@@ -79,8 +79,8 @@
        <div class="skills-content">
           <div class="column left ">
                <div class="text">My creative skills & experiences.</div>
-                <p>I have contributed to some of the Open Source projects by  Github, DigitalOcean etc. Being a startup enthusiast , I am currenlty working as a Junior Executive at KIIT-Ecell. Mostly work on developing and debugging websites using HTML ,CSS ,Javascript, ReactJS. I am proficient in C++, C . I am open to collaborate.</p>
-                 <a href="https://ecell.org.in/">Read more</a>
+                <p>I have contributed to some of the Open Source projects by  Github, DigitalOcean etc. Being a startup enthusiast , I am currenlty working as a Junior Executive at KIIT Entrepreneurship cell. Mostly work on developing and debugging websites using HTML ,CSS ,Javascript, ReactJS. I am proficient in C++, C . I am open to collaborate.</p>
+                 <a href="https://www.linkedin.com/in/medhavi-basera-9b30261a2/">Know more</a>
           </div>
            <div class="column right">
               <div class="bars">
